// Package: net.ikigai.cds
// Module: cabinet.services
//
// Author: Narcis M. Pap
// Copyright (c) 2018 Ikigai Cloud. All rights reserved.

syntax = "proto3";
import "shared.proto";

// Nodes are the core data format in Cabinet, these elements are globally unique document stores

// Schematic Representation:
// /n/{NODE_TYPE_NODE_ID} = {EMBEDDED_PROP}

// IRI Relative Representation:
// Node:            ./n/{NODE_ID}
// Node Property    ./n/{NODE_ID}/p/{PROPERTY_ID}
// Node Attribute   ./n/{NODE_ID}/[v/c/u]

message NodeMutationRequest {
    Node node = 1;
}

message NodeCreateResponse{
    MutationStatus status = 1;
    string node_id = 2;
}

message NodeGetRequest {
    RetrieveMode mode = 1;
    string id = 2;
}

message NodeGetResponse {
    Node node = 1;
}

message NodeListRequest {
    RetrieveMode mode = 1;
    string resume_at = 2;
    int32 page_size = 3;

    int32 type = 4;
}

message NodeListResponse {
    int32 cnt = 1;
    repeated Node nodes = 2;
}
